# MultiCameraPose

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindPoseLib.cmake
ext/undistortion/: LICENSE  README.md  undistortion.h
src/: CMakeLists.txt  common.h  fixed_rig_camera_pose.cc  generalized_pose_solver_gp3p.cc  generalized_pose_solver_gp3p.h  generalized_pose_solver_gp4ps.cc  generalized_pose_solver_gp4ps.h  multi_camera_pose.cc  types.h
